# mechinterp-autoencoders

./: .gitignore  README.md  _types.py  autoencoder.py  autoencoder_modal_wrapper.py  automated_interp_test.py  automated_interpretability.py  benchmark_speed.py  clip_mechinterp_pipeline.py  common.py  datamodels.py  get_data.bash  gpu_pipeline.py  loss_and_stats.py  main.py  mechinterp_pipeline.py  mechninterp_utils.py  modal_common.py  modal_run_benchmark.py  modal_run_test.py  models.py  owndiffusion.py  process_dataset.py  pyproject.toml  requirements.txt  setup.bash  show_activations.py  spectre_diffusion.py  tests.py  train.py  train_autoencoder.py  train_clip_autoencoder.py  train_transformer.py  training_config.py  utils.py
Laion_Processing/: dataloader.py  process_dataset.py
SoLU_1L256W_C4_Width_Scan/models--NeelNanda--SoLU_1L256W_C4_Width_Scan/snapshots/804fc7020714b08ef560ef1036332b5a75d8316c/: .gitattributes
benchmarks/: perf.py  run_benchmark.py
mechinterp_autoencoders/: GatedAutoencoder.py  __init__.py  autoencoder.py  base_autoencoder.py  compute_metrics.py  jump_relu.py  kernels.py  pydantic_models.py  topk_autoencoder.py  utils.py
mechinterp_autoencoders/automation/: automated_interp.py
streamlit_serve/: app.py  serve_streamlit.py
tests/: model_test.py  test_autoencoder.py
