[tool.poetry]
name = "mechinterp-autoencoders"
version = "0.1.0"
description = "An implementation of all popular autoencoders"
repository = "https://github.com/HP2706/mechinterp-autoencoders.git"  
authors = ["HP <hprjdk@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "mechinterp-autoencoders"},
]
[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["mechinterp-autoencoders"]
exclude = [
    "**/__pycache__",
]